[gd_scene load_steps=9 format=3 uid="uid://bblhf6vvso762"]

[ext_resource type="Texture2D" uid="uid://dbihqvn2o6ud1" path="res://Assets/misc/Page-Tear.png" id="1_ma1v7"]
[ext_resource type="Script" uid="uid://d3lairqjbr8mq" path="res://Scripts/Misc/settings.gd" id="1_p46qs"]
[ext_resource type="FontFile" uid="uid://b250p5s872loq" path="res://Assets/fonts/HelpMe.ttf" id="2_p46qs"]
[ext_resource type="LabelSettings" uid="uid://bkxphvms3i0f3" path="res://Assets/misc/MenuFontTres.tres" id="3_dkbde"]
[ext_resource type="Texture2D" uid="uid://bmj0a8io00r6t" path="res://Assets/misc/Untitled_design_16.png" id="4_ygnii"]

[sub_resource type="LabelSettings" id="LabelSettings_dkbde"]
font = ExtResource("2_p46qs")
font_size = 50
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_741ux"]
font = ExtResource("2_p46qs")
font_size = 50
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_ltsvj"]
font = ExtResource("2_p46qs")
font_size = 50
font_color = Color(0, 0, 0, 1)

[node name="settings" type="CanvasLayer"]
script = ExtResource("1_p46qs")

[node name="TabButtons" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 422.0
offset_top = 261.0
offset_right = 462.0
offset_bottom = 301.0

[node name="MusicButton" type="Button" parent="TabButtons"]
layout_mode = 0
offset_left = 411.0
offset_top = 97.0
offset_right = 669.0
offset_bottom = 187.0
flat = true

[node name="PageTear" type="Sprite2D" parent="TabButtons/MusicButton"]
position = Vector2(125, 48)
scale = Vector2(0.25, 0.25)
texture = ExtResource("1_ma1v7")

[node name="Label" type="Label" parent="TabButtons/MusicButton/PageTear"]
offset_left = -432.0
offset_top = -100.0
offset_right = 464.0
offset_bottom = 116.0
text = "Audio"
label_settings = ExtResource("3_dkbde")
horizontal_alignment = 1

[node name="ControlsButton" type="Button" parent="TabButtons"]
layout_mode = 0
offset_left = 411.0
offset_top = 245.0
offset_right = 669.0
offset_bottom = 335.0
flat = true

[node name="PageTear" type="Sprite2D" parent="TabButtons/ControlsButton"]
position = Vector2(125, 48)
scale = Vector2(0.25, 0.25)
texture = ExtResource("1_ma1v7")

[node name="Label" type="Label" parent="TabButtons/ControlsButton/PageTear"]
offset_left = -432.0
offset_top = -92.0
offset_right = 464.0
offset_bottom = 124.0
text = "Controls"
label_settings = ExtResource("3_dkbde")
horizontal_alignment = 1

[node name="ExitButton" type="Button" parent="TabButtons"]
layout_mode = 0
offset_left = 411.0
offset_top = 402.0
offset_right = 669.0
offset_bottom = 492.0
flat = true

[node name="PageTear" type="Sprite2D" parent="TabButtons/ExitButton"]
position = Vector2(125, 48)
scale = Vector2(0.25, 0.25)
texture = ExtResource("1_ma1v7")

[node name="Label" type="Label" parent="TabButtons/ExitButton/PageTear"]
offset_left = -432.0
offset_top = -92.0
offset_right = 464.0
offset_bottom = 124.0
text = "Back"
label_settings = ExtResource("3_dkbde")
horizontal_alignment = 1

[node name="MusicMenu" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 401.0
offset_top = 280.0
offset_right = 441.0
offset_bottom = 320.0

[node name="NinePatchRect" type="NinePatchRect" parent="MusicMenu"]
layout_mode = 0
offset_left = 30.0
offset_top = 40.0
offset_right = 1120.0
offset_bottom = 461.0
texture = ExtResource("4_ygnii")

[node name="MasterLabel" type="Label" parent="MusicMenu"]
layout_mode = 0
offset_left = 164.0
offset_top = 100.0
offset_right = 369.0
offset_bottom = 158.0
text = "Master"
label_settings = SubResource("LabelSettings_dkbde")
horizontal_alignment = 1

[node name="MasterSlider" type="HSlider" parent="MusicMenu"]
layout_mode = 0
offset_left = 401.0
offset_top = 120.0
offset_right = 995.0
offset_bottom = 136.0

[node name="MusicLabel" type="Label" parent="MusicMenu"]
layout_mode = 0
offset_left = 164.0
offset_top = 222.0
offset_right = 369.0
offset_bottom = 280.0
text = "Music"
label_settings = SubResource("LabelSettings_741ux")
horizontal_alignment = 1

[node name="MusicSlider" type="HSlider" parent="MusicMenu"]
layout_mode = 0
offset_left = 401.0
offset_top = 245.0
offset_right = 992.0
offset_bottom = 261.0

[node name="SFXLabel" type="Label" parent="MusicMenu"]
layout_mode = 0
offset_left = 164.0
offset_top = 357.0
offset_right = 369.0
offset_bottom = 415.0
text = "SFX"
label_settings = SubResource("LabelSettings_ltsvj")
horizontal_alignment = 1

[node name="SFXSlider" type="HSlider" parent="MusicMenu"]
layout_mode = 0
offset_left = 401.0
offset_top = 372.0
offset_right = 995.0
offset_bottom = 388.0

[node name="ApplyButton" type="Button" parent="MusicMenu"]
layout_mode = 0
offset_left = 745.0
offset_top = 495.0
offset_right = 1003.0
offset_bottom = 585.0
flat = true

[node name="PageTear" type="Sprite2D" parent="MusicMenu/ApplyButton"]
position = Vector2(125, 48)
scale = Vector2(0.25, 0.25)
texture = ExtResource("1_ma1v7")

[node name="Label" type="Label" parent="MusicMenu/ApplyButton/PageTear"]
offset_left = -380.0
offset_top = -92.0
offset_right = 516.0
offset_bottom = 124.0
text = "Apply"
label_settings = ExtResource("3_dkbde")
horizontal_alignment = 1

[node name="BackButton" type="Button" parent="MusicMenu"]
layout_mode = 0
offset_left = 164.0
offset_top = 498.0
offset_right = 422.0
offset_bottom = 588.0
flat = true

[node name="PageTear" type="Sprite2D" parent="MusicMenu/BackButton"]
position = Vector2(125, 48)
scale = Vector2(0.25, 0.25)
texture = ExtResource("1_ma1v7")

[node name="Label" type="Label" parent="MusicMenu/BackButton/PageTear"]
offset_left = -380.0
offset_top = -104.0
offset_right = 516.0
offset_bottom = 112.0
text = "Back"
label_settings = ExtResource("3_dkbde")
horizontal_alignment = 1

[node name="ControlsMenu" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 401.0
offset_top = 280.0
offset_right = 441.0
offset_bottom = 320.0

[node name="NinePatchRect" type="NinePatchRect" parent="ControlsMenu"]
layout_mode = 0
offset_left = 30.0
offset_top = 40.0
offset_right = 1120.0
offset_bottom = 461.0
texture = ExtResource("4_ygnii")

[node name="RemapContainer" type="VBoxContainer" parent="ControlsMenu"]
layout_mode = 0
offset_left = 154.0
offset_top = 71.0
offset_right = 1111.0
offset_bottom = 458.0
scale = Vector2(0.8843216, 0.97031075)

[node name="ConfirmButton" type="Button" parent="ControlsMenu"]
layout_mode = 0
offset_left = 745.0
offset_top = 495.0
offset_right = 1003.0
offset_bottom = 585.0
flat = true

[node name="PageTear" type="Sprite2D" parent="ControlsMenu/ConfirmButton"]
position = Vector2(125, 48)
scale = Vector2(0.25, 0.25)
texture = ExtResource("1_ma1v7")

[node name="Label" type="Label" parent="ControlsMenu/ConfirmButton/PageTear"]
offset_left = -380.0
offset_top = -92.0
offset_right = 516.0
offset_bottom = 124.0
text = "Apply"
label_settings = ExtResource("3_dkbde")
horizontal_alignment = 1

[node name="BackButton" type="Button" parent="ControlsMenu"]
layout_mode = 0
offset_left = 164.0
offset_top = 498.0
offset_right = 422.0
offset_bottom = 588.0
flat = true

[node name="PageTear" type="Sprite2D" parent="ControlsMenu/BackButton"]
position = Vector2(125, 48)
scale = Vector2(0.25, 0.25)
texture = ExtResource("1_ma1v7")

[node name="Label" type="Label" parent="ControlsMenu/BackButton/PageTear"]
offset_left = -380.0
offset_top = -104.0
offset_right = 516.0
offset_bottom = 112.0
text = "Back"
label_settings = ExtResource("3_dkbde")
horizontal_alignment = 1
